--- a/dockerfile.base
+++ b/dockerfile.base
@@ -1,69 +1,55 @@
-FROM alpine:3.8
+FROM godev:latest
 
 RUN apk update && \
     apk upgrade
-
-RUN apk add curl git tar tmux neovim
-
-# INSTALL GLIBC FOR GOLANG
-RUN apk --no-cache add ca-certificates wget
-RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub
-RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.29-r0/glibc-2.29-r0.apk
-RUN apk add glibc-2.29-r0.apk
 
 RUN chmod g+w /home && \
     mkdir -p /home/project && \
     mkdir -p /user/local
 
-EXPOSE 3000
-
-ENV GO_VERSION 1.12.7
-
-RUN GOOS=linux
-RUN GOARCH=amd64
-RUN CGO_ENABLED=0
-
-ENV GOPATH=/home/project/go
-ENV GO_ROOT=/usr/local/go
-ENV PATH=/usr/local/go/bin:$PATH
-ENV PATH=${GOPATH}:$PATH
-
-RUN echo $PATH
-
-RUN mkdir -p $GOPATH
-RUN mkdir -p $GOPATH/bin
-RUN mkdir -p $GO_ROOT
-
-RUN curl -s https://storage.googleapis.com/golang/go$GO_VERSION.linux-amd64.tar.gz | tar -C /usr/local -xzf -
+EXPOSE 300
     
-ENV HOME /home/project
+ENV HOME /home
 
-WORKDIR $GOPATH
+# ----------------------------------------------------------------------------------------------------------------------------------------------------------
 
-RUN echo $GOPATH
+# TMUX 
 
-RUN go version
+## INSTALL TMUX
+RUN apk add tmux
 
-RUN go get -u -v github.com/ramya-rao-a/go-outline && \
-    go get -u -v github.com/acroca/go-symbols && \     
-    go get -u -v github.com/nsf/gocode && \     
-    go get -u -v github.com/rogpeppe/godef && \     
-    go get -u -v golang.org/x/tools/cmd/godoc && \     
-    go get -u -v github.com/zmb3/gogetdoc && \     
-    go get -u -v golang.org/x/lint/golint && \     
-    go get -u -v github.com/fatih/gomodifytags && \     
-    go get -u -v github.com/uudashr/gopkgs/cmd/gopkgs && \     
-    go get -u -v golang.org/x/tools/cmd/gorename && \     
-    go get -u -v sourcegraph.com/sqs/goreturns && \     
-    go get -u -v github.com/cweill/gotests/... && \     
-    go get -u -v github.com/josharian/impl && \     
-    go get -u -v github.com/haya14busa/goplay/cmd/goplay && \     
-    go get -u -v github.com/davidrjenni/reftools/cmd/fillstruct && \     
-    go get -u -v github.com/golang/dep/cmd/dep && \     
-    go get -u -v golang.org/x/lint/golint && \     
-    go get -u -v github.com/go-task/task/cmd/task && \     
-    rm -rf $GOPATH/src/* && rm -rf $GOPATH/pkg/*
+# TMUX configs
+COPY .tmux.conf $HOME
 
-RUN echo $PATH 
+# ----------------------------------------------------------------------------------------------------------------------------------------------------------
 
-ENTRYPOINT tmux 
+# ZSH 
+
+## INSTALL ZSH
+RUN apk add zsh
+
+# set the zsh theme
+ENV ZSH_THEME agnoster
+
+# run the installation script  
+RUN wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh || true
+
+
+# ----------------------------------------------------------------------------------------------------------------------------------------------------------
+
+# NEOVIM
+## INSTALL
+
+RUN apk add neovim
+
+## plugin manager
+RUN  curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+
+
+RUN mkdir -p $HOME/.config/nvim/plugged
+COPY init.vim $HOME/.config/nvim
+
+# ----------------------------------------------------------------------------------------------------------------------------------------------------------
+
+ # start zsh
+  ENTRYPOINT [ "bin/zsh" ]
